# Statistical-mechanics

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.bat  build.ps1
include/linalg/: linalg.hpp
include/quenches/: quenches.hpp
src/: main.cu
src/linalg/: linalg.cu
src/models/: xxz_chain.cu
tests/: test_diagonalize.cu
